# freminal

./: .dictionary.txt  .gitignore  ATTRIBUTIONS.md  Cargo.toml  README.md  agents.md  config.toml  config_example.toml  flake.nix  lint.yaml  opencode.json  renovate.json  sequence_decoder.py  shell_echo.sh  typos.toml
freminal/: Cargo.toml
freminal-buffer/: API.md  Cargo.toml  MIGRATION_PLAN.md  PROGRESS.md  TEST_FIXES_SUMMARY.md
freminal-buffer/benches/: buffer_memory_bench.rs  buffer_row_bench.rs
freminal-buffer/src/: buffer.rs  cell.rs  compact_row.rs  compressed_block.rs  image_store.rs  lib.rs  response.rs  row.rs  terminal_handler.rs  url_detect.rs
freminal-buffer/src/buffer/: compression.rs  cursor.rs  erase.rs  flatten.rs  images.rs  lifecycle.rs  lines.rs  mod.rs  resize_and_alt.rs  scroll.rs  tabs.rs
freminal-buffer/src/terminal_handler/: dcs.rs  graphics_iterm2.rs  graphics_kitty.rs  graphics_sixel.rs  mod.rs  pty_writer.rs  sgr.rs  shell_integration.rs
freminal-buffer/tests/: buffer_tests.rs  kitty_keyboard_stack.rs  mod_decstbm_prop.rs  mod_decstbm_unit.rs  row_tests.rs  scroll_region_edge_cases.rs  terminal_handler_integration.rs
freminal-common/: Cargo.toml  buildback.rs
freminal-common/src/: app_state.rs  args.rs  base64.rs  colors.rs  config.rs  cursor.rs  gui_theme.rs  keybindings.rs  layout.rs  lib.rs  logging.rs  pty_write.rs  scroll.rs  sgr.rs  terminal_size.rs  terminfo.rs  themes.rs  window_state.rs
freminal-common/src/buffer_states/: buffer_type.rs  command_block.rs  cursor.rs  error.rs  fonts.rs  format_tag.rs  ftcs.rs  kitty_graphics.rs  line_draw.rs  line_wrap.rs  mod.rs  mode.rs  osc.rs  osc_notify_99.rs  pointer_shape.rs  sixel.rs  tchar.rs  terminal_output.rs  terminal_sections.rs  unicode_placeholder.rs  url.rs  window_manipulation.rs
freminal-common/src/buffer_states/modes/: allow_alt_screen.rs  allow_column_mode_switch.rs  alternate_scroll.rs  application_escape_key.rs  decanm.rs  decarm.rs  decawm.rs  decbkm.rs  decckm.rs  deccolm.rs  declrmm.rs  decnkm.rs  decnrcm.rs  decom.rs  decsclm.rs  decscnm.rs  decsdm.rs  dectcem.rs  grapheme.rs  in_band_resize_mode.rs  irm.rs  keypad.rs  kitty_keyboard.rs  lnm.rs  mod.rs  modify_other_keys_mode.rs  mouse.rs  private_color_registers.rs  reverse_wrap_around.rs  rl_bracket.rs  s8c1t.rs  sync_updates.rs  theme.rs  unknown.rs  xt_rev_wrap2.rs  xtcblink.rs  xtextscrn.rs  xtmsewin.rs
freminal-common/tests/: arg_tests.rs  color_tests.rs  config_tests.rs  cursor_tests.rs  cursor_visual_style_tests.rs  mode_boilerplate_tests.rs  mode_dispatch_tests.rs  mouse_mode_tests.rs  scroll_direction_tests.rs  sgr_direct_tests.rs  window_manipulation_tests.rs
freminal-terminal-emulator/: Cargo.toml  build.rs
freminal-terminal-emulator/benches/: buffer_benches.rs
freminal-terminal-emulator/src/: ansi.rs  error.rs  format_tracker.rs  input.rs  interface.rs  lib.rs  playback.rs  recording.rs  snapshot.rs
freminal-terminal-emulator/src/ansi_components/: apc.rs  csi.rs  dcs.rs  mod.rs  mode.rs  osc.rs  osc_clipboard.rs  osc_iterm2.rs  osc_notify.rs  osc_palette.rs  osc_shell_info.rs  sgr.rs  standard.rs  tracer.rs
freminal-terminal-emulator/src/ansi_components/csi_commands/: cbt.rs  cha.rs  cht.rs  cnl.rs  cpl.rs  cub.rs  cud.rs  cuf.rs  cup.rs  cuu.rs  da.rs  dch.rs  decrqm.rs  decscusr.rs  decslpp.rs  decslrm.rs  decstbm.rs  dl.rs  dsr.rs  ech.rs  ed.rs  el.rs  ich.rs  ict.rs  il.rs  mod.rs  modify_other_keys.rs  rep.rs  report_xt_version.rs  scorc.rs  sd.rs  send_device_attributes.rs  sgr.rs  su.rs  tbc.rs  util.rs  vpa.rs  xtversion.rs
freminal-terminal-emulator/src/io/: mod.rs  pty.rs
freminal-terminal-emulator/src/state/: buffer.rs  data.rs  internal.rs  mod.rs
freminal-terminal-emulator/src/terminal_handler/: cursor_ops.rs  dcs.rs  edit_ops.rs  graphics_iterm2.rs  graphics_kitty.rs  graphics_sixel.rs  mod.rs  notify_99.rs  osc.rs  osc_colors.rs  reports.rs  scroll_ops.rs  sgr.rs  shell_integration.rs  window_ops.rs
freminal-terminal-emulator/tests/: ansi_parser_inner_csi_finished_set_cursor_position_g.rs  ansi_prop.rs  ansi_recovery.rs  ansi_recovery_tracer.rs  ansi_tests.rs  auto_url_detection.rs  cha_parser_unit.rs  csi_commands_cub_cuu_dch.rs  csi_commands_decrqm_decscusr.rs  csi_commands_decslpp.rs  csi_commands_decstbm.rs  csi_commands_dsr.rs  csi_commands_ed_el.rs  csi_commands_exhaustive.rs  csi_commands_param_tests.rs  csi_commands_report_xt_version.rs  csi_commands_unit.rs  csi_unit.rs  decrpm_integration.rs  integration_all.rs  integration_csi.rs  integration_invalid.rs  integration_osc.rs  interface_tests.rs  kitty_keyboard_integration.rs  kitty_keyboard_stack.rs  line_draw_unit.rs  mode_unit.rs  modes_decawm.rs  modes_decckm.rs  modes_deccolm.rs  modes_decom.rs  modes_dectcem.rs  modes_dispatcher.rs  modes_dispatcher_invalid.rs  modes_enable_disable.rs  modes_exhaustive.rs  modes_helpers.rs  modes_lnm.rs  modes_tests.rs  (+35 more)
freminal-terminal-emulator/tests/golden/: self_test_hello.txt
freminal-windowing/: Cargo.toml
freminal-windowing/examples/: hello.rs
freminal-windowing/src/: egui_integration.rs  error.rs  event_loop.rs  gl_context.rs  lib.rs  lock_state.rs
freminal/benches/: paste_guard_bench.rs  render_loop_bench.rs
freminal/examples/: chrome_gallery.rs
freminal/src/: lib.rs  main.rs  playback.rs  shell_integration.rs
freminal/src/gui/: actions.rs  app_impl.rs  atlas.rs  box_drawing.rs  broadcast_guard.rs  chrome_damage.rs  chrome_style.rs  close_guard.rs  colors.rs  command_blocks.rs  command_history.rs  folding.rs  font_manager.rs  fonts.rs  frame_damage.rs  hot_reload.rs  icons.rs  layout_ops.rs  menu.rs  mod.rs  mouse.rs  notifications.rs  panes.rs  paste_guard.rs  platform.rs  pty.rs  recording.rs  renderer.rs  rendering.rs  run.rs  search.rs  session.rs  settings.rs  settings_dispatch.rs  shaping.rs  shell_history.rs  tab_spawning.rs  tabs.rs  terminal.rs  toast.rs  (+3 more)
portable-pty/: Cargo.toml  vendored.md
portable-pty/src/: cmdbuilder.rs  lib.rs  serial.rs  unix.rs
portable-pty/src/win/: conpty.rs  mod.rs  procthreadattr.rs  pseudocon.rs
(+144 files in other folders)
