[workspace]
resolver = "3"
members = [
  "freminal",
  "freminal-buffer",
  "freminal-common",
  "freminal-terminal-emulator",
  "portable-pty",
  "xtask",
]
default-members = [
  "freminal",
  "freminal-buffer",
  "freminal-common",
  "freminal-terminal-emulator",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92.0"
description = "A terminal emulator written in Rust"
documentation = "https://github.com/fredsystems/freminal/README.md"
readme = "README.md"
homepage = "https://github.com/fredsystems/freminal"
repository = "https://github.com/fredsystems/freminal"
license = "MIT"
keywords = ["emulator", "terminal", "terminal-emulator", "tty", "vt100"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
arc-swap = "1.9.1"
assert_cmd = "2.2.0"
bitflags = "2.11.0"
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["cargo_metadata"] }
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
conv2 = "0.4.2"
criterion = "0.8.2"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
downcast-rs = "2.0.2"
duct = "1.1.1"
eframe = { version = "0.34.1", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
  "wayland",
  "x11",
] }
egui = { version = "0.34.1", default-features = false, features = [
  "default_fonts",
  "persistence",
] }
filedescriptor = "0.8.3"
fontdb = "0.23.0"
futures = "0.3.32"
glow = "0.17.0"
image = { version = "0.25.10", default-features = false, features = [
  "gif",
  "jpeg",
  "png",
] }
lazy_static = "1.5.0"
libc = "0.2.184"
log = "0.4.29"
nix = "0.31.2"
open = "5.3.3"
predicates = "3.1.4"
proptest = "1.11.0"
rustybuzz = "0.20.1"
serde = { version = "1.0.228", features = ["derive"] }
serial2 = "0.2.35"
shared_library = "0.1.9"
shell-words = "1.1.1"
smol = "2.0.2"
swash = "0.2.7"
sys-locale = "0.3.2"
tar = "0.4.45"
tempfile = "3.27.0"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "parking_lot",
] }
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
vergen = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }
winapi = "0.3.9"
winreg = "0.56.0"

[workspace.metadata.cargo-machete]
ignored = ["vergen"]
