[workspace]
resolver = "3"
members = ["freminal", "freminal-buffer", "freminal-common", "freminal-terminal-emulator", "freminal-windowing", "portable-pty", "xtask"]
default-members = ["freminal", "freminal-buffer", "freminal-common", "freminal-terminal-emulator"]

[workspace.package]
version = "0.12.0-beta.4"
edition = "2024"
rust-version = "1.95.0"
description = "A terminal emulator written in Rust"
documentation = "https://github.com/fredsystems/freminal/README.md"
readme = "README.md"
homepage = "https://github.com/fredsystems/freminal"
repository = "https://github.com/fredsystems/freminal"
license = "MIT"
keywords = ["emulator", "terminal", "terminal-emulator", "tty", "vt100"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
arc-swap = "1.9.1"
assert_cmd = "2.2.2"
bitflags = "2.13.1"
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["cargo_metadata"] }
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
conv2 = "0.4.2"
criterion = "0.8.2"
crossbeam-channel = "0.5.16"
directories = "6.0.0"
downcast-rs = "2.0.2"
duct = "1.1.1"
# Exact-pinned (`=`) as a matched set: #436 relies on egui_glow 0.35.0's
# (undocumented) tolerance of multiple `paint_primitives` calls per frame for
# the chrome-cache head/band/tail split, so even a patch bump must be a
# deliberate, re-verified change. egui / egui_glow / egui-winit must move in
# lockstep, so all three are exact-pinned together.
egui = { version = "=0.35.0", default-features = false, features = ["default_fonts", "persistence"] }
egui_glow = { version = "=0.35.0", default-features = false }
egui-winit = "=0.35.0"
filedescriptor = "0.8.3"
flate2 = "1.1.9"
fontdb = "0.23.0"
futures = "0.3.32"
glow = "0.17.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
lazy_static = "1.5.0"
libc = "0.2.188"
log = "0.4.32"
lz4_flex = "0.14.0"
nix = "0.31.3"
notify-rust = "4.18.0"
open = "5.4.0"
predicates = "3.1.4"
proptest = "1.11.0"
raw-window-handle = "0.6.2"
regex = "1.13.0"
rmp-serde = "1.3.0"
rustc-hash = "2.1.3"
rustybuzz = "0.20.1"
self_cell = "1.3.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serial2 = "0.2.37"
shared_library = "0.1.9"
shell-words = "1.1.1"
smol = "2.0.2"
swash = "0.2.8"
sys-locale = "0.3.2"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
tar = "0.4.46"
tempfile = "3.27.0"
test-log = { version = "0.2.21", features = ["trace"] }
thiserror = "2.0.19"
toml = "1.1.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "parking_lot"] }
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"
vergen = { version = "10.0.0", features = ["build", "cargo", "rustc", "si"] }
winapi = "0.3.9"
winit = { version = "0.30.13", features = ["rwh_06"] }
winreg = "0.56.0"

[workspace.metadata.cargo-machete]
ignored = ["vergen"]

# Profiling profile: optimized like release but with full debuginfo and
# without stripping, so `perf` / `cargo flamegraph` produce symbol-rich,
# inline-aware stacks. Build with `cargo build --profile profiling` (or
# `cargo flamegraph --profile profiling ...`). No effect on the normal
# `release` / `dev` builds. See CONTRIBUTING / the profiling notes for the
# btop idle-CPU investigation (issue #405).
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
