[package]
name = "freminal-buffer"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel.workspace = true
freminal-common = { path = "../freminal-common" }
image.workspace = true
tracing.workspace = true

# dev dependencies
[features]
# Enable file-based benchmark fixtures (requires ../speed_tests/10000_lines.txt to exist).
# Not enabled by default so CI does not depend on the external file.
bench_fixtures = []

[dev-dependencies]
criterion.workspace = true
crossbeam-channel.workspace = true
proptest.workspace = true
test-log.workspace = true
# assert_cmd.workspace = true
# predicates.workspace = true


[build-dependencies]
vergen.workspace = true

[[bench]]
name = "buffer_row_bench"
harness = false
