[package]
name = "freminal-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tracing.workspace = true
conv2.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
directories.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
test-log.workspace = true
proptest.workspace = true
anyhow.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
