[package]
name = "freminal-common"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
conv2.workspace = true
directories.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
anyhow.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
tempfile.workspace = true
test-log.workspace = true
toml.workspace = true

[features]
default = []
playback = []
