[package]
name = "freminal-terminal-emulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
freminal-common = { path = "../freminal-common" }
thiserror.workspace = true
tracing.workspace = true
portable-pty.workspace = true
conv2.workspace = true
tempfile.workspace = true
tar.workspace = true
sys-locale.workspace = true
vergen.workspace = true

# dev dependencies
[dev-dependencies]
criterion.workspace = true
test-log.workspace = true
proptest.workspace = true
anyhow.workspace = true
# assert_cmd.workspace = true
# predicates.workspace = true


[build-dependencies]
vergen.workspace = true

[[bench]]
name = "buffer_benches"
harness = false
