[package]
name = "freminal-terminal-emulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["arc-swap"]

[[bench]]
harness = false
name = "buffer_benches"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
conv2.workspace = true
crossbeam-channel.workspace = true
freminal-buffer = { path = "../freminal-buffer" }
freminal-common = { path = "../freminal-common" }
portable-pty = { path = "../portable-pty" }
sys-locale.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
vergen.workspace = true

# dev dependencies
[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
proptest.workspace = true
test-log.workspace = true
# assert_cmd.workspace = true
# predicates.workspace = true

[build-dependencies]
tar.workspace = true
vergen.workspace = true

[features]
default = []
playback = ["freminal-common/playback"]
