[package]
name = "freminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.bundle]
name = "Freminal"
identifier = "io.github.fredclausen.freminal"
copyright = "Copyright (c) 2024-2026 Fred Clausen"
category = "Developer Tools"
short_description = "A terminal emulator written in Rust"
long_description = """
Freminal is a terminal emulator written in Rust, designed to provide a fast, efficient, and customizable terminal experience. It leverages modern Rust libraries and technologies to deliver a robust and user-friendly interface for developers and power users.
"""
deb_depends = ["libgl1-mesa-glx"]
# osx_frameworks = ["SDL2"]
# osx_url_schemes = ["io.github.fredclausen.freminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "render_loop_bench"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
arc-swap.workspace = true
clap.workspace = true
conv2.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
egui.workspace = true
fontdb.workspace = true
freminal-common = { path = "../freminal-common" }
freminal-terminal-emulator = { path = "../freminal-terminal-emulator" }
glow.workspace = true
thiserror.workspace = true
open.workspace = true
rustybuzz.workspace = true
swash.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
regex = "1"

# dev dependencies
[dev-dependencies]
criterion.workspace = true

[features]
default = []
playback = ["freminal-terminal-emulator/playback"]
validation = []
