[package]
name = "freminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.bundle]
name = "Freminal"
identifier = "io.github.fredclausen.freminal"
copyright = "Copyright (c) 2024-2026 Fred Clausen"
category = "Developer Tools"
icon = ["assets/icon.png"]
short_description = "A terminal emulator written in Rust"
long_description = """
Freminal is a terminal emulator written in Rust, designed to provide a fast, efficient, and customizable terminal experience. It leverages modern Rust libraries and technologies to deliver a robust and user-friendly interface for developers and power users.
"""
deb_depends = ["libgl1-mesa-glx"]
# osx_frameworks = ["SDL2"]
# osx_url_schemes = ["io.github.fredclausen.freminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.generate-rpm]
# RPM forbids '-' in the Version field (it is the NEVRA Version/Release
# separator), so a SemVer pre-release such as "0.9.0-beta.2" is illegal as-is.
# `cargo xtask bump-version` keeps this in sync, translating the SemVer
# pre-release separator to the RPM tilde operator (e.g. "0.9.0~beta.2"), which
# sorts older than the final release just like the SemVer pre-release does.
version = "0.9.0~beta.5"
assets = [
  { source = "target/release/freminal", dest = "/usr/bin/freminal", mode = "755" },
]

[[bench]]
harness = false
name = "paste_guard_bench"

[[bench]]
harness = false
name = "render_loop_bench"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
arc-swap.workspace = true
clap.workspace = true
conv2.workspace = true
crossbeam-channel.workspace = true
egui.workspace = true
egui_glow.workspace = true
fontdb.workspace = true
freminal-common = { path = "../freminal-common" }
freminal-terminal-emulator = { path = "../freminal-terminal-emulator" }
freminal-windowing = { path = "../freminal-windowing" }
glow.workspace = true
image.workspace = true
notify-rust.workspace = true
open.workspace = true
regex.workspace = true
rustc-hash.workspace = true
rustybuzz.workspace = true
swash.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true

# dev dependencies
[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

# Platform-specific: CWD readback for layout save / recording snapshots.
# See freminal/src/gui/platform.rs::read_cwd and plan subtask 71.16.
# `sysinfo` wraps proc_pidinfo (macOS) and NtQueryInformationProcess (Windows)
# behind a safe, cross-platform `Process::cwd()` API.  Linux uses the
# built-in `/proc/<pid>/cwd` readlink path and does not need sysinfo.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
sysinfo.workspace = true

[features]
default = []
validation = []
